# libfabbri

./: .clang-format  .gitignore  CMakeLists.txt  README.md  octree.dot
doc/: Doxyfile  EnergyForAUniformlyMagnetizedPolyhedra 2.nb  EnergyForAUniformlyMagnetizedPolyhedra.nb  Fabbri.nb  Jacobian.nb  Ravaud_and_Lemarquand.nb  TriangleJacobian.nb  classes.rst  conf.py  fabbri.rst  geometry.rst  index.rst  index_old.old  libfabbri_functions.rst  libfabbri_library.rst  linearCurl.nb  octree.rst  octree_library.rst  refs.bib  regular_grid.rst  vector3d_class.rst  vector3d_geometric_operations.rst  vector3d_operations.rst  vectors_and_matrices.rst
include/: aliases.hpp  b_field_calculator.hpp  box.hpp  cuboid.hpp  fabbri.hpp  field.hpp  file_io.hpp  geometry.hpp  geometry3d.hpp  loader_exodusII.hpp  loader_micromag.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  mesh.hpp  mesh_utilities.hpp  model.hpp  quad.hpp  rectangle.hpp  regular_grid.hpp  sample_plane.hpp  table.hpp  tetrahedron.hpp  triangle.hpp  twiddle.hpp  vector2d.hpp  vector3d.hpp  vector4d.hpp  writer_micromag.hpp  writer_xdmf.hpp
include/amiga/: box.hpp  fabbri.hpp  geometry.hpp  matrix.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  quad.hpp  tetrahedron.hpp  triangle.hpp  vector2d.hpp  vector3d.hpp  vector4d.hpp
include/amiga/trees/: octree.hpp
include/trees/: octree.hpp  recursive_octree.hpp
scripts/: Makefile  Makefile.mak  TODO.md  gen-linalg-matrix.py  gen-linalg-vector-tests.py  gen-linalg-vector.py  linalg-vector-tests  linalg.hpp  linalg_tests.cpp  linalg_vector.hpp  linalg_vector_tests.cpp
src/: CMakeLists.txt  mvpus.cpp  mvpusc.cpp
test-gen/: DWf_data.py  fabbri.py  generate_test_file.py  octree_small_cube.py  small_cube.e  small_cube.txt  we.h5  we_data.py  wf_data.py
test-include/: test_data_reader.hpp
test-src/: CMakeLists.txt  integration_001.cpp  test_box.cpp  test_cuboid.cpp  test_fabbri.cpp  test_geometry.cpp  test_geometry3d.cpp  test_matrix.cpp  test_matrix2x2.cpp  test_matrix3x3.cpp  test_matrix4x4.cpp  test_octree.cpp  test_recursive_octree.cpp  test_regular_grid.cpp  test_sample_plane.cpp  test_tetrahedron.cpp  test_vector2d.cpp  test_vector3d.cpp  test_vector4d.cpp
